corrected map scaling cutting off input fields

--- a/app/assets/stylesheets/rides.css
+++ b/app/assets/stylesheets/rides.css
@@ -27,7 +27,6 @@ html, body {
   margin-left: 12px;
   padding: 0 11px 0 13px;
   text-overflow: ellipsis;
-  width: 250px;
 }
 
 #ride_departure:focus,
